[package]
name = "playground"
version = "0.1.0"
authors = ["Philippe Normand <philn@igalia.com>"]

[lib]
name = "playground"
path = "src/lib.rs"

[dependencies]
glib = "0.4"
gstreamer = "0.10"
gstreamer-app = "0.10"
gstreamer-player = "0.10"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
ipc-channel = "0.9"

[[bin]]
name = "test-player"

